--- a/public/styles/pages/tools/color-info.css
+++ b/public/styles/pages/tools/color-info.css
@@ -10,7 +10,9 @@
 
 #color-display {
     background-image: repeating-linear-gradient(45deg, #aaa 25%, transparent 25%, transparent 75%, #aaa 75%, #aaa), repeating-linear-gradient(45deg, #aaa 25%, white 25%, white 75%, #aaa 75%, #aaa);
-    background-position: 0 0, 5px 5px;
+    background-position:
+        0 0,
+        5px 5px;
     background-size: 10px 10px;
     border: 4px solid #16181c;
     cursor: pointer;
