--- a/public/styles/tooltips.css
+++ b/public/styles/tooltips.css
@@ -15,7 +15,10 @@
     pointer-events: none;
     position: absolute;
     transform: translate3d(0, 0, 0);
-    transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out, transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
+    transition:
+        opacity 0.2s ease-in-out,
+        visibility 0.2s ease-in-out,
+        transform 0.2s cubic-bezier(0.71, 1.7, 0.77, 1.24);
     visibility: hidden;
 }
 
