--- a/styles/pages/info/queer-calendar.css
+++ b/styles/pages/info/queer-calendar.css
@@ -5,40 +5,40 @@
     margin: 15px 0;
     width: 100%;
     height: 10px;
-}
 
-.color-box div {
-    flex-grow: 1;
-    transition: all 0.8s ease-in-out;
-    cursor: pointer;
-    margin: 0;
-    height: 10px;
-}
+    & div {
+        flex-grow: 1;
+        transition: all 0.8s ease-in-out;
+        cursor: pointer;
+        margin: 0;
+        height: 10px;
 
-.color-box div:hover {
-    flex-grow: 5;
-}
+        &:hover {
+            flex-grow: 5;
+        }
+    }
 
-.color-box .red {
-    background-color: #ff5852;
-}
+    & .red {
+        background-color: #ff5852;
+    }
 
-.color-box .orange {
-    background-color: #ff9000;
-}
+    & .orange {
+        background-color: #ff9000;
+    }
 
-.color-box .yellow {
-    background-color: #ffd300;
-}
+    & .yellow {
+        background-color: #ffd300;
+    }
 
-.color-box .green {
-    background-color: #3dcd49;
-}
+    & .green {
+        background-color: #3dcd49;
+    }
 
-.color-box .blue {
-    background-color: #0089d7;
-}
+    & .blue {
+        background-color: #0089d7;
+    }
 
-.color-box .purple {
-    background-color: #9e44c4;
+    & .purple {
+        background-color: #9e44c4;
+    }
 }
