--- a/styles/pages/tools/color-info.css
+++ b/styles/pages/tools/color-info.css
@@ -2,10 +2,10 @@
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
     gap: 10px;
-}
 
-.color-grid div {
-    margin-top: 20px;
+    & div {
+        margin-top: 20px;
+    }
 }
 
 #color-display {
@@ -20,17 +20,17 @@
     background-size: 10px 10px;
     width: 100px;
     height: 100px;
-}
 
-#color-display::after {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: currentcolor;
-    width: 100%;
-    height: 100%;
-    content: "";
+    &::after {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background-color: currentcolor;
+        width: 100%;
+        height: 100%;
+        content: "";
+    }
 }
 
 #color-history {
@@ -41,17 +41,17 @@
     max-width: 90%;
     height: 105px;
     overflow-y: scroll;
-}
 
-#color-history li {
-    display: inline-block;
-    cursor: pointer;
-    margin-inline: 5px;
-    list-style-type: none;
-}
+    & li {
+        display: inline-block;
+        cursor: pointer;
+        margin-inline: 5px;
+        list-style-type: none;
 
-#color-history li:hover {
-    filter: brightness(0.7);
+        &:hover {
+            filter: brightness(0.7);
+        }
+    }
 }
 
 #full-color {
