--- a/styles/search.css
+++ b/styles/search.css
@@ -12,76 +12,75 @@
     max-width: 90%;
     height: 60px;
     color: #c5c5cc;
-}
 
-.large-search-box .large-search-button {
-    float: right;
-    cursor: pointer;
-    margin: 8px 10px 0 0;
-    color: #c5c5cc;
-    font-size: 25px;
-}
+    & .large-search-button {
+        float: right;
+        cursor: pointer;
+        margin: 8px 10px 0 0;
+        color: #c5c5cc;
+        font-size: 25px;
+    }
 
-.large-search-box .large-search-text {
-    box-shadow: none !important;
-    border: none !important;
-    background-color: #242424 !important;
-    padding: 6px 8px !important;
-    width: 85% !important;
-    height: 100% !important;
-    color: #c5c5cc !important;
-    font-size: 20px !important;
-}
+    & .large-search-text {
+        box-shadow: none !important;
+        border: none !important;
+        background-color: #242424 !important;
+        padding: 6px 8px !important;
+        width: 85% !important;
+        height: 100% !important;
+        color: #c5c5cc !important;
+        font-size: 20px !important;
 
-.large-search-box .large-search-text::placeholder {
-    color: #c5c5cc;
+        &::placeholder {
+            color: #c5c5cc;
+        }
+    }
 }
 
 .large-search-results {
     z-index: -100;
-}
 
-.large-search-results table {
-    display: block;
-    align-self: flex-end;
-    margin-top: 1px;
-    border: 2px solid #3b3b3f;
-    border-radius: 10px;
-    background-color: #242424;
-    padding: 8px;
-    width: 100%;
-    max-height: 400px;
-    overflow-y: scroll;
-    color: #c5c5cc;
-    font-size: 18px;
-}
+    & table {
+        display: block;
+        align-self: flex-end;
+        margin-top: 1px;
+        border: 2px solid #3b3b3f;
+        border-radius: 10px;
+        background-color: #242424;
+        padding: 8px;
+        width: 100%;
+        max-height: 400px;
+        overflow-y: scroll;
+        color: #c5c5cc;
+        font-size: 18px;
 
-.large-search-results table td {
-    border-top: 2px solid #4c6072;
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
+        & tr:first-of-type td {
+            border-top: none;
+            padding-top: 0;
+        }
 
-.large-search-results table tr:first-of-type > td {
-    border-top: none;
-    padding-top: 0;
-}
+        & tr:last-of-type td {
+            padding-bottom: 0;
+        }
 
-.large-search-results table tr:last-of-type > td {
-    padding-bottom: 0;
-}
+        & td {
+            border-top: 2px solid #4c6072;
+            padding-top: 15px;
+            padding-bottom: 15px;
 
-.large-search-results table td .results-title {
-    padding-bottom: 5px;
-    font-size: 20px;
-}
+            & a {
+                color: #4c6072;
 
-.large-search-results table td,
-.large-search-results table td a {
-    color: #4c6072;
-}
+                &:hover,
+                &.selected {
+                    color: #364c5f;
+                }
+            }
 
-.large-search-results table td a:hover,
-.large-search-results table td a.selected {
-    color: #364c5f;
+            & .results-title {
+                padding-bottom: 5px;
+                font-size: 20px;
+            }
+        }
+    }
 }
