--- a/styles/styles.css
+++ b/styles/styles.css
@@ -31,20 +31,20 @@ body {
 a {
     color: #1777ca;
     text-decoration: none;
-}
 
-a:hover {
-    color: #145791;
-    text-decoration: none;
+    &:hover {
+        color: #145791;
+        text-decoration: none;
+    }
 }
 
 h1 {
     padding-block: 20px;
     font-weight: 600;
-}
 
-h1 > i.fa-regular {
-    font-size: 0.8em;
+    & > i.fa-regular {
+        font-size: 0.8em;
+    }
 }
 
 code,
@@ -72,7 +72,7 @@ kbd {
     display: inline-block;
     box-shadow:
         0 1px 1px rgb(0 0 0 / 20%),
-        0 2px 0 0 rgb(255 255 255 / 70.2%) inset;
+        0 2px 0 0 rgb(255 255 255 / 70%) inset;
     border: 1px solid #b4b4b4;
     border-radius: 3px;
     background-color: #eee;
@@ -106,11 +106,35 @@ nav {
     background-color: #1b1e24 !important;
     padding: 35px 25px;
     font-size: 20px;
+
+    @media (width <= 600px) {
+        font-size: 16px;
+    }
 }
 
 .nav-shrunk {
     padding: 25px;
     font-size: 18px;
+
+    @media (width <= 600px) {
+        font-size: 13px;
+    }
+
+    & .logo {
+        font-size: 23px;
+
+        @media (width <= 600px) {
+            font-size: 16px;
+        }
+    }
+
+    & .logo-tools {
+        font-size: 18px;
+
+        @media (width <= 600px) {
+            font-size: 13px;
+        }
+    }
 }
 
 nav,
@@ -121,51 +145,23 @@ nav,
         font-size 0.4s ease;
 }
 
-@media (width <= 600px) {
-    nav {
-        font-size: 16px;
-    }
-
-    .nav-shrunk {
-        font-size: 13px;
-    }
-}
-
 .logo {
     float: left;
     font-weight: 700;
     font-size: 28px;
     text-align: left;
-}
 
-.nav-shrunk .logo {
-    font-size: 23px;
+    @media (width <= 600px) {
+        font-size: 18px;
+    }
 }
 
 .logo-tools {
     font-weight: 700;
     font-size: 22px;
-}
 
-.nav-shrunk .logo-tools {
-    font-size: 18px;
-}
-
-@media (width <= 600px) {
-    nav .logo {
-        font-size: 18px;
-    }
-
-    .nav-shrunk .logo {
-        font-size: 16px;
-    }
-
-    .logo-tools {
+    @media (width <= 600px) {
         font-size: 14px;
-    }
-
-    .nav-shrunk .logo-tools {
-        font-size: 13px;
     }
 }
 
@@ -179,80 +175,79 @@ nav,
     padding: 5px;
     height: 44px;
     color: #c5c5cc;
-}
 
-.search-box .search-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    float: right;
-    cursor: pointer;
-    margin: auto;
-    width: 30px;
-    height: 30px;
-    color: #c5c5cc;
-}
+    & .search-button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        float: right;
+        cursor: pointer;
+        margin: auto;
+        width: 30px;
+        height: 30px;
+        color: #c5c5cc;
+    }
 
-.search-box .search-text {
-    margin-top: -10px !important;
-    border: none !important;
-    background-color: #242424 !important;
-    padding: 6px 0 !important;
-    width: 0 !important;
-    color: #c5c5cc !important;
-}
+    & .search-text {
+        margin-top: -10px !important;
+        border: none !important;
+        background-color: #242424 !important;
+        padding: 6px 0 !important;
+        width: 0 !important;
+        color: #c5c5cc !important;
 
-.search-box .search-text::placeholder {
-    color: #c5c5cc;
+        &::placeholder {
+            color: #c5c5cc;
+        }
+    }
 }
 
 .search-results {
     display: none;
     z-index: -100;
-}
 
-.search-results table {
-    display: block;
-    margin-top: 1px;
-    border: 2px solid #3b3b3f;
-    border-radius: 10px;
-    background-color: #242424;
-    padding: 8px;
-    width: 300px;
-    max-height: 500px;
-    overflow-y: scroll;
-    color: #c5c5cc;
-    font-size: 18px;
-}
+    & table {
+        display: block;
+        margin-top: 1px;
+        border: 2px solid #3b3b3f;
+        border-radius: 10px;
+        background-color: #242424;
+        padding: 8px;
+        width: 300px;
+        max-height: 500px;
+        overflow-y: scroll;
+        color: #c5c5cc;
+        font-size: 18px;
 
-.search-results table td {
-    border-top: 2px solid #4c6072;
-    padding-top: 15px;
-    padding-bottom: 15px;
-}
+        & tr:first-of-type > td {
+            border-top: none;
+            padding-top: 0;
+        }
 
-.search-results table tr:first-of-type > td {
-    border-top: none;
-    padding-top: 0;
-}
+        & tr:last-of-type > td {
+            padding-bottom: 0;
+        }
 
-.search-results table tr:last-of-type > td {
-    padding-bottom: 0;
-}
+        & td {
+            border-top: 2px solid #4c6072;
+            padding-top: 15px;
+            padding-bottom: 15px;
 
-.search-results table td .results-title {
-    padding-bottom: 5px;
-    font-size: 20px;
-}
+            & .results-title {
+                padding-bottom: 5px;
+                font-size: 20px;
+            }
 
-.search-results table td,
-.search-results table td a {
-    color: #4c6072;
-}
+            & a {
+                color: #4c6072;
 
-.search-results table td a:hover,
-.search-results table td a.selected {
-    color: #364c5f;
+                &:hover,
+                &.selected {
+                    color: #364c5f;
+                }
+            }
+        }
+    }
 }
 
 .search-box:hover > .search-text,
@@ -273,50 +268,48 @@ nav,
     margin-left: 40px;
     color: #145791;
     font-weight: 700;
-}
 
-.nav-time:hover {
-    color: #0e4474;
-}
-
-.nav-time > #time-icon {
-    margin-left: 2px;
-}
-
-.nav-time > #time-icon.fa-triangle-exclamation {
-    color: #f55;
-}
-
-.nav-time > #time-icon.fa-sun-bright {
-    color: #ffac33;
-}
-
-.nav-time > #time-icon.fa-moon-stars {
-    color: wheat;
-}
-
-@media (width <= 600px) {
-    .nav-time {
+    @media (width <= 600px) {
         margin-right: 20px;
+    }
+
+    &:hover {
+        color: #0e4474;
+    }
+
+    & > #time-icon {
+        margin-left: 2px;
+
+        &.fa-triangle-exclamation {
+            color: #f55;
+        }
+
+        &.fa-sun-bright {
+            color: #ffac33;
+        }
+
+        &.fa-moon-stars {
+            color: wheat;
+        }
     }
 }
 
 .source {
     color: dimgray;
-}
 
-.source:hover {
-    color: #505050;
+    &:hover {
+        color: #505050;
+    }
 }
 
 #last-commit-info {
     margin-left: 20px;
     color: #b4b4b4;
     font-size: 14px;
-}
 
-#last-commit-info::after {
-    margin-left: -120px;
+    &::after {
+        margin-left: -120px;
+    }
 }
 
 /*
@@ -338,6 +331,10 @@ nav,
     color: whitesmoke;
     font-size: 18px;
     text-align: center;
+
+    @media (width <= 600px) {
+        width: 32px;
+    }
 }
 
 #show-shortcuts {
@@ -353,6 +350,10 @@ nav,
     color: whitesmoke;
     font-size: 18px;
     text-align: center;
+
+    @media (width <= 600px) {
+        display: none;
+    }
 }
 
 #scroll-to-top {
@@ -368,26 +369,16 @@ nav,
     color: whitesmoke;
     font-size: 18px;
     text-align: center;
+
+    @media (width <= 600px) {
+        right: 0;
+    }
 }
 
 #show-shortcuts:hover,
 #scroll-to-top:hover {
     background: #2b2e35;
     color: dimgray;
-}
-
-@media (width <= 600px) {
-    .footer-utils {
-        width: 32px;
-    }
-
-    #show-shortcuts {
-        display: none;
-    }
-
-    #scroll-to-top {
-        right: 0;
-    }
 }
 
 #shortcuts {
@@ -417,6 +408,13 @@ nav,
     padding: 0;
     width: 30%;
     min-width: 300px;
+
+    &.animate-out-top {
+        animation-duration: 0.3s;
+        animation-direction: reverse;
+        animation-name: animate-top;
+        background: none;
+    }
 }
 
 @keyframes animate-top {
@@ -429,13 +427,6 @@ nav,
         top: 0;
         opacity: 1;
     }
-}
-
-#shortcuts.animate-out-top {
-    animation-duration: 0.3s;
-    animation-direction: reverse;
-    animation-name: animate-top;
-    background: none;
 }
 
 #shortcuts-header {
@@ -453,12 +444,12 @@ nav,
     color: whitesmoke;
     font-weight: bold;
     font-size: 28px;
-}
 
-#close-shortcuts:hover,
-#close-shortcuts:focus {
-    color: dimgray;
-    text-decoration: none;
+    &:hover,
+    &:focus {
+        color: dimgray;
+        text-decoration: none;
+    }
 }
 
 #shortcuts-list {
@@ -485,10 +476,8 @@ nav,
     color: gray;
     font-weight: 500;
     text-align: left;
-}
 
-@media (width <= 700px) {
-    .toolbox {
+    @media (width <= 700px) {
         padding: 10px 8px 10px 15px;
         max-width: 85%;
     }
@@ -499,10 +488,8 @@ nav,
     font-weight: 700;
     font-size: 20px;
     line-height: 200%;
-}
 
-@media (width <= 700px) {
-    .tooltext {
+    @media (width <= 700px) {
         font-size: 16px;
     }
 }
@@ -514,47 +501,41 @@ nav,
     width: 70%;
     overflow-y: scroll;
     color: #a8a8a8;
-}
 
-@media (width <= 700px) {
-    .info-table {
+    @media (width <= 700px) {
         display: inline-block;
         margin: 8px auto 30px;
         min-width: 97%;
     }
-}
 
-.info-table th {
-    border: 4px solid #1b1e24;
-    background-color: #292d33;
-    padding: 10px;
-    font-size: 18px;
-    text-align: center;
-}
+    & th {
+        border: 4px solid #1b1e24;
+        background-color: #292d33;
+        padding: 10px;
+        font-size: 18px;
+        text-align: center;
 
-@media (width <= 700px) {
-    .info-table th {
-        padding: 20px;
-        font-size: 14px;
+        @media (width <= 700px) {
+            padding: 20px;
+            font-size: 14px;
+        }
     }
-}
 
-.info-table tr {
-    background-color: #31363d;
-}
+    & tr {
+        background-color: #31363d;
+    }
 
-.info-table td {
-    border: 4px solid #1b1e24;
-    padding: 20px;
-    font-weight: 500;
-    font-size: 18px;
-    text-align: left;
-}
+    & td {
+        border: 4px solid #1b1e24;
+        padding: 20px;
+        font-weight: 500;
+        font-size: 18px;
+        text-align: left;
 
-@media (width <= 700px) {
-    .info-table td {
-        padding: 14px;
-        font-size: 16px;
+        @media (width <= 700px) {
+            padding: 14px;
+            font-size: 16px;
+        }
     }
 }
 
@@ -562,10 +543,10 @@ nav,
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(var(--min-width, 300px), 1fr));
     gap: 10px;
-}
 
-.basic-grid > div {
-    margin-top: 15px;
+    & > div {
+        margin-top: 15px;
+    }
 }
 
 .toc {
@@ -581,10 +562,8 @@ nav,
     font-size: 18px;
     line-height: 150%;
     text-align: left;
-}
 
-@media (width <= 700px) {
-    .toc {
+    @media (width <= 700px) {
         max-width: 70%;
     }
 }
@@ -612,10 +591,10 @@ nav,
     font-weight: 500;
     font-size: 20px;
     text-align: center;
-}
 
-.error-link:hover {
-    color: #1d3d70;
+    &:hover {
+        color: #1d3d70;
+    }
 }
 
 .error-image {
@@ -640,18 +619,16 @@ nav,
 
 .mobile-hidden {
     display: unset;
+
+    @media (width <= 700px) {
+        display: none;
+    }
 }
 
 .mobile-only {
     display: none;
-}
 
-@media (width <= 700px) {
-    .mobile-hidden {
-        display: none;
-    }
-
-    .mobile-only {
+    @media (width <= 700px) {
         display: unset;
     }
 }
@@ -659,10 +636,8 @@ nav,
 .tab {
     display: inline-block;
     margin-left: 25px;
-}
 
-@media (width <= 700px) {
-    .tab {
+    @media (width <= 700px) {
         margin-left: 15px;
     }
 }
@@ -684,26 +659,26 @@ img.emoji {
     border-radius: 3px;
     background-color: #393f42;
     padding: 3px;
-}
 
-@media (hover) {
-    .spoiler::before {
-        display: flex;
-        position: absolute;
-        justify-content: center;
-        align-items: center;
-        opacity: 1;
-        transition: opacity 0.3s ease;
-        inset: 0;
-        border-radius: 3px;
-        background-color: #1f2225;
-        content: "";
-        text-align: center;
-    }
+    @media (hover) {
+        &::before {
+            display: flex;
+            position: absolute;
+            justify-content: center;
+            align-items: center;
+            opacity: 1;
+            transition: opacity 0.3s ease;
+            inset: 0;
+            border-radius: 3px;
+            background-color: #1f2225;
+            content: "";
+            text-align: center;
+        }
 
-    .spoiler:hover::before {
-        opacity: 0;
-        transition: opacity 0.5s ease;
+        &:hover::before {
+            opacity: 0;
+            transition: opacity 0.5s ease;
+        }
     }
 }
 
@@ -723,10 +698,8 @@ img.emoji {
     color: #0b5394;
     font-weight: 500;
     font-size: 90px;
-}
 
-@media (width <= 700px) {
-    .timer-time {
+    @media (width <= 700px) {
         font-size: 30px;
     }
 }
@@ -739,24 +712,22 @@ img.emoji {
     background-color: rgb(0 0 0 / 50%);
     width: 100%;
     height: 100%;
-}
 
-#overlay .noscript-message {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: #f55;
-    font-weight: bold;
-    font-size: 50px;
+    & .noscript-message {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: #f55;
+        font-weight: bold;
+        font-size: 50px;
+    }
 }
 
 .scroll-message {
     display: none;
-}
 
-@media (width <= 700px) {
-    .scroll-message {
+    @media (width <= 700px) {
         display: initial;
     }
 }
@@ -791,7 +762,6 @@ textarea {
 
 input:not(input[type="file"], input[type="checkbox"], input[type="color"]),
 .fakeinput {
-    -ms-overflow-style: none;
     transition: all 0.2s ease;
     cursor: pointer;
     border: 1px solid #444;
@@ -826,10 +796,10 @@ input[type="color"] {
     border: 1px solid #444;
     border-radius: 4px;
     background-color: #252525;
-}
 
-input[type="color"]:hover {
-    background-color: #2a2a2a;
+    &:hover {
+        background-color: #2a2a2a;
+    }
 }
 
 select {
@@ -860,11 +830,11 @@ select {
     color: white;
     font-weight: normal;
     font-size: 16px;
-}
 
-.file-upload:hover {
-    transition: all 0.2s ease;
-    background-color: #2b2b2b;
+    &:hover {
+        transition: all 0.2s ease;
+        background-color: #2b2b2b;
+    }
 }
 
 button:not(.fakeinput) {
@@ -912,24 +882,18 @@ button:hover:not(.fakeinput) {
     box-shadow: none;
 }
 
-.invisible-input[type="number"]::-webkit-inner-spin-button,
-.invisible-input[type="number"]::-webkit-outer-spin-button,
-.no-arrow[type="number"]::-webkit-inner-spin-button,
-.no-arrow[type="number"]::-webkit-outer-spin-button {
+.invisible-input[type="number"]:is(::-webkit-inner-spin-button, ::-webkit-outer-spin-button),
+.no-arrow[type="number"]:is(::-webkit-inner-spin-button, ::-webkit-outer-spin-button) {
     appearance: none;
     margin: 0;
 }
 
-input[type="search"]::-ms-clear,
-input[type="search"]::-ms-reveal {
+input[type="search"]:is(::-ms-clear, ::-ms-reveal) {
     display: none;
     width: 0;
     height: 0;
 }
 
-input[type="search"]::-webkit-search-decoration,
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-results-button,
-input[type="search"]::-webkit-search-results-decoration {
+input[type="search"]:is(::-webkit-search-decoration, ::-webkit-search-cancel-button, ::-webkit-search-results-button, ::-webkit-search-results-decoration) {
     display: none;
 }
