--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,3 +1,4 @@
+<!doctype html>
 <html lang="en">
     <head>
         <!-- Common Tags -->
@@ -101,10 +102,10 @@
                 <h1>
                     {{#if iconStyle}}
                         <i class="fa-regular fa-{{icon}}" style="{{iconStyle}}"></i>
-                        {{#if toolboxTitle}}{{{toolboxTitle}}}{{else}}{{pageTitle}}{{/if}}:
+                        {{#if toolboxTitle}}{{{toolboxTitle}}}{{else}}{{title}}{{/if}}:
                     {{else}}
                         <i class="fa-regular fa-{{icon}}"></i>
-                        {{#if toolboxTitle}}{{{toolboxTitle}}}{{else}}{{pageTitle}}{{/if}}:
+                        {{#if toolboxTitle}}{{{toolboxTitle}}}{{else}}{{title}}{{/if}}:
                     {{/if}}
                 </h1>
                 {{{body}}}
