chore: update deps and format

--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
     <head>
         <!-- Common Tags -->
@@ -83,7 +82,10 @@
         <nav id="navbar">
             <a href="/">
                 <span class="logo">
-                    <span style="color: #ff5555" data-value="E">E</span><span style="color: #ffaa00" data-value="e">e</span><span style="color: #ffff55" data-value="j">j</span><span style="color: #55ff55" data-value="i">i</span><span style="color: #00aa00" data-value="t">t</span><span style="color: #00aaaa" data-value="'">'</span><span style="color: #5555ff" data-value="s">s</span>
+                    <span style="color: #ff5555" data-value="E">E</span><span style="color: #ffaa00" data-value="e">e</span><span style="color: #ffff55" data-value="j">j</span><span
+                        style="color: #55ff55"
+                        data-value="i"
+                    >i</span><span style="color: #00aa00" data-value="t">t</span><span style="color: #00aaaa" data-value="'">'</span><span style="color: #5555ff" data-value="s">s</span>
                     <span style="color: #aa00aa" class="logo-tools" data-value="Tools">Tools</span>
                 </span>
             </a>
@@ -94,7 +96,10 @@
                 </div>
                 <a href="/tools/time" class="nav-time"><span id="time-display">Loading...</span> <i id="time-icon" class="fa-solid fa-triangle-exclamation"></i></a>
                 <a href="https://github.com/Eejit43/eejitstools-v2" target="_blank" class="source">Source <i class="fa-brands fa-github" style="margin-left: 3px; transform: translateY(1.5px)"></i></a>
-                {{#if commitInfo}}<code id="last-commit-info" class="tooltip-bottom" data-tooltip="&quot;{{commitInfo.message}}&quot; by {{commitInfo.author}}"><i class="fa-solid fa-code-commit" style="padding-right: 5px"></i>{{commitInfo.sha}}</code>{{/if}}
+                {{#if commitInfo}}<code id="last-commit-info" class="tooltip-bottom" data-tooltip="&quot;{{commitInfo.message}}&quot; by {{commitInfo.author}}"><i
+                            class="fa-solid fa-code-commit"
+                            style="padding-right: 5px"
+                        ></i>{{commitInfo.sha}}</code>{{/if}}
             </span>
         </nav>
         {{#if toolbox}}
