--- a/views/pages/tools/roman-converter.hbs
+++ b/views/pages/tools/roman-converter.hbs
@@ -1,5 +1,9 @@
 <div class="tooltext">
-    <span style="font-weight: 500; color: dimgray; font-size: 18px">A letter with a bar over it multiplies that value by 1,000. For example, <span style="border-top: 1px solid">M</span> equals 1,000,000. These numbers can be entered by putting an underscore before the letter, for example, _M will mean <span style="border-top: 1px solid">M</span>.<br /><em>Technically</em>, 4 million or above cannot be represented in roman numerals, however I have added functionality for it.</span><br /><br />
+    <span style="font-weight: 500; color: dimgray; font-size: 18px">A letter with a bar over it multiplies that value by 1,000. For example,
+        <span style="border-top: 1px solid">M</span>
+        equals 1,000,000. These numbers can be entered by putting an underscore before the letter, for example, _M will mean
+        <span style="border-top: 1px solid">M</span>.<br /><em>Technically</em>, 4 million or above cannot be represented in roman numerals, however I have added functionality for it.</span><br /><br
+    />
     Integer:
     <input type="text" pattern="[0-9]*" id="integer-input" style="width: 10rem" />
     <button id="integer-convert" disabled>Convert</button><button id="integer-reset" style="margin-right: 40px" disabled>Reset</button>
