--- a/views/pages/tools/scientific-notation-converter.hbs
+++ b/views/pages/tools/scientific-notation-converter.hbs
@@ -1,5 +1,10 @@
 <div class="tooltext">
-    <span style="font-weight: 500; color: dimgray; font-size: 16px">Scientific notation can be represented using e notation, such as <code>5e+2</code> (plus sign optional), or using standard scientific notation, such as <code>5 x 10<sup>2</sup></code> (written as <code>5 x 10^2</code>). Both variants can be used in this converter.</span><br /><br />
+    <span style="font-weight: 500; color: dimgray; font-size: 16px">Scientific notation can be represented using e notation, such as
+        <code>5e+2</code>
+        (plus sign optional), or using standard scientific notation, such as
+        <code>5 x 10<sup>2</sup></code>
+        (written as
+        <code>5 x 10^2</code>). Both variants can be used in this converter.</span><br /><br />
     Decimal:
     <input type="text" pattern="[0-9]*" id="decimal-input" style="width: 10rem" />
     <button id="decimal-convert" disabled>Convert</button><button id="decimal-reset" style="margin-right: 40px" disabled>Reset</button>
