--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,8 @@
 <header>
     <span class="mainlogo">
-        <span style="color: #ff5555">E</span><span style="color: #ffaa00">e</span><span style="color: #ffff55">j</span><span style="color: #55ff55">i</span><span style="color: #00aa00">t</span><span style="color: #00aaaa">'</span><span style="color: #5555ff">s</span>
+        <span style="color: #ff5555">E</span><span style="color: #ffaa00">e</span><span style="color: #ffff55">j</span><span style="color: #55ff55">i</span><span style="color: #00aa00">t</span><span
+            style="color: #00aaaa"
+        >'</span><span style="color: #5555ff">s</span>
         <span style="color: #aa00aa" class="mainlogo-tools">Tools</span>
     </span>
     <br />
