--- a/views/pages/tools/regex-tester.hbs
+++ b/views/pages/tools/regex-tester.hbs
@@ -1,7 +1,10 @@
 <div class="tooltext">
     Input:<br />
     <span style="font-weight: 500; color: dimgray; font-size: 16px"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions/Cheatsheet" target="_blank">Regex</a>:
-        <input id="regex-input" style="width: 320px; max-width: 70%" />　<a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions#advanced_searching_with_flags" target="_blank">Flags</a>:
+        <input id="regex-input" style="width: 320px; max-width: 70%" />　<a
+            href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide/Regular_Expressions#advanced_searching_with_flags"
+            target="_blank"
+        >Flags</a>:
         <input id="flags-input" value="g" style="width: 4rem" /><br />
         Replace string (leave empty to delete):
         <input id="replace-input" style="width: 320px; max-width: 70%" /></span><br />
