--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
         <meta name="robots" content="index, follow" />
-        <title>{{#if title}}{{title}} | Eejit's Tools{{else}}Eejit's Tools{{/if}}</title>
+        <title>{{title}} | Eejit's Tools</title>
         <!-- Search Engine -->
         <meta name="title" content="{{title}}" />
         <meta name="description" content="{{descriptionParsed}}" />
