--- a/src/public/styles/styles.css
+++ b/src/public/styles/styles.css
@@ -3,6 +3,53 @@
 @import url("https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css");
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@500;600;700&display=swap");
 
+:root {
+    /* Main Colors */
+    --info-color-100: #accee5;
+    --info-color-200: #7aaacc;
+    --info-color-300: #4680a9;
+    --info-color-400: #144466;
+    --info-color-500: #021726;
+    --error-color-100: #e5acac;
+    --error-color-200: #cc7a7a;
+    --error-color-300: #a94646;
+    --error-color-400: #661414;
+    --error-color-500: #260202;
+    --warning-color-100: #e5c9ac;
+    --warning-color-200: #cca37a;
+    --warning-color-300: #c08245;
+    --warning-color-400: #663d14;
+    --warning-color-500: #261402;
+    --success-color-100: #ace5ba;
+    --success-color-200: #7acc8f;
+    --success-color-300: #46a95f;
+    --success-color-400: #146629;
+    --success-color-500: #011a07;
+
+    /* "Brand" Colors */
+    --brand-color-1: var(--error-color-300);
+    --brand-color-2: var(--warning-color-300);
+    --brand-color-3: #d3c05a;
+    --brand-color-4: var(--success-color-300);
+    --brand-color-5: #336c41;
+    --brand-color-6: var(--info-color-300);
+    --brand-color-7: #366281;
+    --brand-color-8: #7d46a9;
+
+    /* General Colors */
+    --neutral-color-100: #a3b3bf;
+    --neutral-color-200: #6a7f8d;
+    --neutral-color-300: #3f5d73;
+    --neutral-color-400: #162e3f;
+    --neutral-color-500: #020d14;
+    --link-color: #2b71a5;
+    --link-color-hover: var(--info-color-400);
+
+    /* Fonts */
+    --font-family: "Source Sans Pro", sans-serif;
+    --font-family-monospace: "Fira Mono", monospace;
+}
+
 /*
  ================
      GLOBAL
@@ -28,15 +75,15 @@ html {
 body {
     margin: 0;
     padding-bottom: 40px;
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: var(--font-family);
 }
 
 a {
-    color: #1777ca;
+    color: var(--link-color);
     text-decoration: none;
 
     &:hover {
-        color: #145791;
+        color: var(--link-color-hover);
         text-decoration: none;
     }
 }
@@ -81,7 +128,7 @@ kbd {
     background-color: #eee;
     padding: 2px 4px;
     color: #333;
-    font-weight: 700;
+    font-weight: bold;
     font-size: 0.85em;
     line-height: 1;
     white-space: nowrap;
@@ -98,12 +145,13 @@ kbd {
 */
 
 nav {
-    display: flex;
+    display: grid;
     position: fixed;
     top: 0;
     right: 0;
     left: 0;
-    justify-content: space-between;
+    grid-template-columns: 4fr repeat(4, max-content);
+    column-gap: 25px;
     align-items: center;
     z-index: 5000;
     background-color: #1b1e24 !important;
@@ -116,7 +164,7 @@ nav {
 }
 
 .nav-shrunk {
-    padding: 25px;
+    padding: 15px 25px;
     font-size: 18px;
 
     @media (width <= 600px) {
@@ -141,16 +189,14 @@ nav {
 }
 
 nav,
-.logo,
-.logo-tools {
+nav * {
     transition:
         padding 0.4s ease,
         font-size 0.4s ease;
 }
 
 .logo {
-    float: left;
-    font-weight: 700;
+    font-weight: bold;
     font-size: 28px;
     text-align: left;
 
@@ -160,22 +206,21 @@ nav,
 }
 
 .logo-tools {
-    font-weight: 700;
+    font-weight: bold;
     font-size: 22px;
 
     @media (width <= 600px) {
-        font-size: 14px;
+        font-size: 13px;
     }
 }
 
 .search-box {
-    position: absolute;
-    float: right !important;
-    transform: translate(-100%, -20%);
+    justify-self: end;
     border: 2px solid #3b3b3f;
     border-radius: 10px;
     background-color: #242424;
     padding: 5px;
+    width: max-content;
     height: 44px;
     color: #c5c5cc;
 
@@ -192,7 +237,6 @@ nav,
     }
 
     & .search-text {
-        margin-top: -10px !important;
         border: none !important;
         background-color: #242424 !important;
         padding: 6px 0 !important;
@@ -255,9 +299,8 @@ nav,
 
 .search-box:hover > .search-text,
 .search-text:focus {
-    margin-left: 5px;
     box-shadow: none !important;
-    padding: 6px 8px !important;
+    padding: 7px 0 6px 8px !important;
     width: 249px !important;
 }
 
@@ -267,17 +310,11 @@ nav,
 }
 
 .nav-time {
-    margin-right: 100px;
-    margin-left: 40px;
-    color: #145791;
-    font-weight: 700;
+    justify-self: end;
+    font-weight: bold;
 
     @media (width <= 600px) {
         margin-right: 20px;
-    }
-
-    &:hover {
-        color: #0e4474;
     }
 
     & > #time-icon {
@@ -298,6 +335,7 @@ nav,
 }
 
 .source {
+    justify-self: end;
     color: dimgray;
 
     &:hover {
@@ -306,12 +344,23 @@ nav,
 }
 
 #last-commit-info {
-    margin-left: 20px;
-    color: #b4b4b4;
-    font-size: 14px;
+    justify-self: end;
 
-    &::after {
-        margin-left: -120px;
+    & code {
+        color: #b4b4b4;
+        font-size: 14px;
+
+        & i {
+            padding-right: 5px;
+        }
+
+        &::after {
+            margin-left: -120px;
+        }
+
+        @media (width <= 600px) {
+            font-size: 12px;
+        }
     }
 }
 
@@ -395,6 +444,13 @@ nav,
     width: 100%;
     height: 100%;
     overflow: auto;
+
+    &.animate-out-top {
+        animation-duration: 0.3s;
+        animation-direction: reverse;
+        animation-name: animate-top;
+        background: none;
+    }
 }
 
 #shortcuts-content {
@@ -411,13 +467,6 @@ nav,
     padding: 0;
     width: 30%;
     min-width: 300px;
-
-    &.animate-out-top {
-        animation-duration: 0.3s;
-        animation-direction: reverse;
-        animation-name: animate-top;
-        background: none;
-    }
 }
 
 @keyframes animate-top {
@@ -488,7 +537,7 @@ nav,
 
 .tooltext {
     color: #145791;
-    font-weight: 700;
+    font-weight: bold;
     font-size: 20px;
     line-height: 200%;
 
@@ -754,7 +803,7 @@ textarea {
     max-height: 16rem;
     resize: vertical;
     color: #aaa;
-    font-family: "Fira Mono", monospace;
+    font-family: var(--font-family-monospace);
 }
 
 .fakeinput {
@@ -775,7 +824,7 @@ input:not(input[type="file"], input[type="checkbox"], input[type="color"]),
     scrollbar-width: none;
     color: #aaa;
     font-size: 0.75rem;
-    font-family: "Fira Code", monospace;
+    font-family: var(--font-family-monospace);
 }
 
 input::-webkit-scrollbar,
@@ -817,7 +866,7 @@ select {
     width: 8rem;
     color: #aaa;
     font-size: 0.75rem;
-    font-family: "Fira Code", monospace;
+    font-family: var(--font-family-monospace);
 }
 
 .file-upload {
@@ -851,7 +900,7 @@ button:not(.fakeinput) {
     width: max-content;
     height: max-content;
     color: #ddd;
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: var(--font-family);
 }
 
 button:disabled:not(.fakeinput) {
@@ -875,7 +924,7 @@ button:hover:not(.fakeinput) {
     color: dimgray;
     font-weight: 500;
     font-size: 50px;
-    font-family: "Source Sans Pro", sans-serif;
+    font-family: var(--font-family);
     text-align: right;
 }
 
