--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -1,9 +1,9 @@
 <header>
     <span class="mainlogo">
-        <span style="color: #ff5555">E</span><span style="color: #ffaa00">e</span><span style="color: #ffff55">j</span><span style="color: #55ff55">i</span><span style="color: #00aa00">t</span><span
-            style="color: #00aaaa"
-        >'</span><span style="color: #5555ff">s</span>
-        <span style="color: #aa00aa" class="mainlogo-tools">Tools</span>
+        <span style="color: var(--brand-color-1)">E</span><span style="color: var(--brand-color-2)">e</span><span style="color: var(--brand-color-3)">j</span><span
+            style="color: var(--brand-color-4)"
+        >i</span><span style="color: var(--brand-color-5)">t</span><span style="color: var(--brand-color-6)">'</span><span style="color: var(--brand-color-7)">s</span>
+        <span style="color: var(--brand-color-8)" class="mainlogo-tools">Tools</span>
     </span>
     <br />
     <div class="message">
